# alice-line-count

./: .gitignore  Makefile  README.md  buildLib.sh  countWithNim.py  nim_countlines.py  rawGenCount.py  setup.cfg  setup.py
alicelc/: __init__.py
src/: aliceLC.ini  aliceLC.nim  mapping.txt
