# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = aliceLC
provides         = aliceLC
description      = Fast Line Counting, period
url              = https://github.com/thomastay/aliceLC
author           = Thomas Tay
keywords         = line counting nim
license          = MIT
platforms        = Linux, Darwin, Windows
version          = 0.1.0

long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False            # libso files may not be zip_safe
include_package_data = True
python_requires  = >3+
